--- a/index.html
+++ b/index.html
@@ -330,7 +330,8 @@
 
     // 2) 허용 이메일 목록 (실제 이메일 넣기)
     const ALLOWED_EMAILS = [
-    "what2z@naver.com",
+  "what2z@naver.com",
+  "avushen@naver.com",
   "sj730426@naver.com",
   "nexty@naver.com",
   "leeundersky@naver.com",
@@ -1321,4 +1322,5 @@
   </script>
 </body>
 </html>
+
 
