--- a/index.html
+++ b/index.html
@@ -469,7 +469,8 @@
 
     // 2) 허용 이메일 목록 (여기만 네 리스트로 교체하면 됨)
     const ALLOWED_EMAILS = [
-     "what2z@naver.com",
+  "what2z@naver.com",
+  "avushen@naver.com",
   "sj730426@naver.com",
   "nexty@naver.com",
   "leeundersky@naver.com",
@@ -1467,3 +1468,4 @@
   </script>
 </body>
 </html>
+
