--- a/index.html
+++ b/index.html
@@ -165,11 +165,93 @@
     <hr style="margin:16px 0;" />
 
     <!-- Q&A 예시 -->
-    <div class="qa-item">
-      <h3>Q. 입시에서 중요하게 보아야 할 것은 무엇인가?</h3>
-      <p>A. 각 전형의 <strong>구조와 변화</strong>를 정확히 파악하는 것이 가장 중요합니다.
-      동일한 성적이라도, 전형에 따라 합격 가능성이 크게 달라지기 때문에
-      본인의 강점(내신, 수능, 비교과, 수상 등)에 맞는 전형 조합을 먼저 설계해야 합니다.</p>
+     <div class="qa-item">
+  <h3>Q1. 710점은 붙고, 705점은 떨어지나요? 확률 70% 안정이고, 고속의 찐초록, 6칸…이게 합격을 말해줄까요? 확률 30% 고속의 노랑, 3칸…이게 불합을 말할까요?</h3>
+  <p> ☞ 점수는 라인을 잡을 때 중요할 수 있습니다. 하지만 100명을 뽑는다면, 100명 안에 들면 합격입니다. </p>
+</div>
+
+<div class="qa-item">
+  <h3>Q2. 남들이 잡는 라인, 뭘 보고 왜 보죠?</h3>
+  <p> ☞ 남들이 많이 보는 것을 참초하시면 됩니다! 남들 마음을 읽을 수 있는 걸 봐야죠. 그게 틀리든 맞든 남들은 그걸 믿으니까, 2~3개를 제외하고는 절대 보거나 믿지 마세요. </p>
+</div>
+
+<div class="qa-item">
+  <h3>Q3. 남들이 하는 표본분석법 및 머리자르기를 하고 싶은데 해도 될까요?</h3>
+  <p> ☞ 성대 공학계열 모집 인원을 생각하면 불가능하다는 것을 알 것입니다. 작년 300명 모집에 추합 375명, 올해 성대 공학 294명, 숙대 자전 294명, 단대 퇴계혁신 256명 등입니다. 이런 구조에서 500명을 알려면 1만 명을 추적해야 됩니다. </p>
+</div>
+
+<div class="qa-item">
+  <h3>Q4. 계열 통합 모집의 경우는 어떻게 생각하면 될까요?</h3>
+  <p> ☞ 지원할 때 안정성은 높아집니다. 대신 스나이핑은 더 어려워질 수 있습니다.
+(스나이핑 = 점수가 부족한 상태에서 상향 지원을 노리는 것)</p>
+</div>
+
+<div class="qa-item">
+  <h3>Q5. 학과 선호도에서 정배열이 무엇이고 역배열이 무엇인가요?</h3>
+  <p> ☞ 정배열이란 학과의 선호도 및 입결 평균치를 보았을 때, 높은 과가 위에 있고 낮은 과가 아래에 위치하는 것을 의미합니다.
+예를 들어 문과의 경우 경상계열이 위에 있고 인문계열이 아래에 있다면 정배열입니다.
+반대로 역배열은 그 위치가 전환되는 것을 의미합니다. 예를 들어 이과의 경우 자연과학대학 중 한 학과가 AI 및 컴퓨터공학과와 동일한 위치(높은 위치)에 있다면 역배열로 볼 수 있습니다.
+  </p>
+</div>
+
+<div class="qa-item">
+  <h3>Q6. 의대 구멍은 어떻게 찾죠?</h3>
+  <p> ☞ 의대는 기본적으로 구멍이 나는 구조가 아닙니다. 작년의 경우는 의대 정원이 늘어나면서 나타난 예외적인 현상입니다. 올해는 의대 정원이 원상 복귀했으므로, 작년과는 다르게 판단하셔야 합니다. </p>
+</div>
+
+<div class="qa-item">
+  <h3>Q7. 절대 경쟁률은 무엇인가요?</h3>
+  <p> ☞ 절대 경쟁률은 말 그대로 눈에 보이는 경쟁률을 의미합니다. 쉽게 말해 원서 접수 기간에 확인되는 실질적인 경쟁률입니다. 중·하위권 중 경기권에 걸쳐 있거나, 경기권 밖(지방)으로 나가는 사립대학에서는 절대 경쟁률이 매우 중요합니다. </p>
+</div>
+
+<div class="qa-item">
+  <h3>Q8. 스나이핑을 위해서 나머지 한 군데는 완전한 안정을 써야 되나요?</h3>
+  <p> ☞ 빠른 속도로 안정만 붙는 경우가 많습니다. 이런 경우가 가장 원서 질을 못하는 경우입니다. [적정+적정] 원서보다, [안정+소신] 조합이 더 나쁜 결과를 만드는 경우가 많습니다.
+ </p>
+</div>
+
+<div class="qa-item">
+  <h3>Q9. 표본을 모으는 기준은 무엇인가요?</h3>
+  <p> ☞ 본인의 현재 상태를 파악하는 일이 먼저 진행되어야 합니다. 소신, 안정, 적정, 스나, 노줌스나 등 모든 판단은 개개인의 현재 입장에서 확정 해야 됩니다. 올해 정말 대학을 무조건 가야 하는 상황이라면 안정 쪽을 많이 하시고, 점수가 폭망해서 쓸 학과가 없거나 이미 한 번 더 하시기로 결정하셨다면 스나이핑이나 노줌 스나를 할 수 밖에 없습니다.
+ </p>
+</div>
+
+<div class="qa-item">
+  <h3>Q9. 표본을 모으는 기준은 무엇인가요?</h3>
+  <p> ☞ 본인의 현재 상태를 파악하는 일이 먼저입니다. 소신, 안정, 적정, 스나, 노줌 스나 등 모든 판단은 개인의 현재 입장에서 확정해야 합니다.
+올해 반드시 대학을 가야 하는 상황이라면 안정 쪽 비중을 높이시고, 점수가 크게 낮아 쓸 학과가 없거나 이미 한 번 더 도전하기로 결정했다면 스나이핑이나 노줌 스나를 할 수밖에 없습니다.  </p>
+</div>
+
+<div class="qa-item">
+  <h3>Q10. 괜찮게 보이는 등수인 과가 있는데, 결과가 괜찮겠죠?</h3>
+  <p> ☞ 누구나 다 그렇게 보고 있기 때문에, 그런 과들은 구멍이 나더라도 절대 큰 구멍은 나지 않습니다. 보통 4칸 정도에서 막히는 경우가 많습니다.</p>
+</div>
+
+<div class="qa-item">
+  <h3>Q11. 나에게 유리한 대학을 가야 되는데, 어떻게 생각하세요? </h3>
+  <p> ☞ 반영비상 유리한 대학이 반드시 유리한 것은 아닙니다. 절대로 ‘유리한 대학’만 보지 마세요.
+올해처럼 영어가 어려운 경우에는 영어 반영 비율이 낮은 대학이 많은 사람들에게 유리해 보일 수 있습니다. 그렇더라도 정말로 유리한지 한 번 더 생각해 보시면 답이 나올 것입니다. </p>
+</div>
+
+<div class="qa-item">
+  <h3>Q12. 나만 알고 있는 천국이 있어요.</h3>
+  <p> ☞ 숨겨진 휴양지는 전국 각지에서 사람들이 몰려들어 연말의 강남역처럼 됩니다. 세상에서 나만 알고 있는 것은 나의 키와 몸무게 말고는 없습니다. 누구나 좋아하는 곳은 반드시 다시 확인해 봐야 합니다.
+ </p>
+</div>
+
+<div class="qa-item">
+  <h3>Q13. 저는 현재 저의 학교 라인을 알고 있는 상태입니다. 저의 학교 라인만 분석하면 되겠죠? </h3>
+  <p> ☞ 틈틈이 본인 ‘위’ 라인, ‘본인’ 라인, ‘아래’ 라인을 모두 보세요. 지금 보고 있는 라인에만 사람들이 몰려 있을 수 있습니다. 전체 라인 중 특정 학교만, 혹은 특정 점수대만 몰려 있을 수도 있습니다. </p>
+</div>
+
+<div class="qa-item">
+  <h3>Q14. 가고 싶은 과가 있는데, 합격 확률이 계속 떨어져요. </h3>
+  <p> ☞ 오히려 합격에 가까워진다는 신호일 수도 있습니다. 이 경우 두 가지를 확인해야 합니다.
+전체 학과가 다 떨어지고 있는지, 아니면 특정 학과만 떨어지고 있는지 보세요.
+전체적으로 떨어진다면 내 성적대가 그 학교 내에서 버티지 못하고 있다는 의미일 수 있고, 특정 학과만 떨어진다면 좋은 신호일 가능성도 있습니다.
+</p>
+</div>
+
     </div>
 
     <hr style="margin:24px 0;" />
